<resources>
    <string name="app_name">Score Keeper</string>
    <string name="app_version">0.1</string>

    <string name="action_new_game">New Game</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_history">View History</string>
    <string name="action_exit">Exit</string>
    <string name="player_name">Player Name</string>
    <string name="player_score">Score</string>
    <string name="lowers_this_players_player_score">Lowers this player\'s score</string>
    <string name="raises_this_players_player_score">Raises this player\'s score</string>
    <string name="name_of_the_game">Name of the game</string>
    <string name="new_game">New Game</string>
    <string name="enter_the_name_of_the_game">Enter the name of the game</string>
    <string name="add_player">Add Player</string>
    <string name="lock_or_unlock_the_player_information">Lock or unlock the player information</string>
    <string name="sort_players">Sort players</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="sort">Sort</string>
    <string name="automatically_sorts_by_score">Automatically sorts by score</string>
    <string name="new_team_game">New Team Game</string>
    <string name="sets_the_players_score">Sets the player\'s score</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="save_game">Save Game</string>
    <string name="automatically_sort">Automatically Sort</string>
    <string name="auto_sort_on_by_default">Auto Sort on by default</string>
    <string name="save_settings">Save Settings</string>
    <string name="sort_by">Sort By</string>
    <string name="add_team">Add team</string>
    <string name="sort_teams">Sort teams</string>
    <string name="team_name">Team Name</string>
    <string name="sort_team_members">Sort team members</string>
    <string name="members">Members</string>
    <string name="team_score">Score</string>
    <string name="lock_team_information">Lock team information</string>
    <string name="add_team_member">Add team member</string>
    <string name="locks_the_team_members">Locks the team members</string>
    <string name="expand_or_collapse_the_team_member_list">Expand or collapse the team member list</string>
    <string name="current_score">Current Score</string>
    <string name="the_amount_the_score_will_be_adjusted_by">The amount the score will be adjusted by</string>
    <string name="score_adjusted_by">Adjustment</string>
    <string name="new_score">New score</string>
    <string name="score_edittext_absolute">Enter score</string>
    <string name="score_edittext_offset">Enter offset</string>
    <string name="contact_us">Contact Us</string>
    <string name="welcome_to_score_keeper">Welcome to Score Keeper!</string>
    <string name="welcome_how_to_begin">Please select an option from the menu above to begin.\n\n\nUse the Contact Us option to email any problems or suggestions!</string>

    <!-- preferences stuff -->
    <string-array name="sort_method">
        <item>@string/settings_sort_method_score_hi_lo</item>
        <item>@string/settings_sort_method_score_lo_hi</item>
        <item>@string/settings_sort_method_name_a_z</item>
        <item>@string/settings_sort_method_name_z_a</item>
    </string-array>
    <string name="settings_sort_method_score_hi_lo">Score (High to low)</string>
    <string name="settings_sort_method_score_lo_hi">Score (Low to high)</string>
    <string name="settings_sort_method_name_a_z">Name (A-Z)</string>
    <string name="settings_sort_method_name_z_a">Name (Z-A)</string>

    <string-array name="team_score_track_method">
        <item>@string/settings_team_score_track_team</item>
        <item>@string/settings_team_score_track_players</item>
    </string-array>
    <string name="settings_team_score_track_team">Track team score</string>
    <string name="settings_team_score_track_players">Track player scores</string>

    <string name="settings_autosort_cat">Auto Sort</string>
    <string name="settings_autosort_enabled_key">com.dancingweasels.SETTINGS_AUTOSORT_ENABLED</string>
    <string name="settings_autosort_enabled_title">Auto Sort Enabled</string>
    <string name="settings_autosort_enabled_summary">Whether or not to sort the player list automatically on score update</string>

    <string name="settings_ffa_cat">Free-For-All Settings</string>
    <string name="settings_ffa_sort_method_key">com.dancingweasels.SETTINGS_FFA_SORT_METHOD</string>
    <string name="settings_ffa_sort_method_title">Sort players by</string>
    <string name="settings_ffa_sort_method_summary">The method by which to sort the player list in free for all games</string>

    <string name="settings_values_cat">Values</string>
    <string-array name="score_edit_modes">
        <item>@string/settings_score_edit_mode_absolute</item>
        <item>@string/settings_score_edit_mode_offset</item>
        <item>@string/settings_score_edit_mode_picker</item>
    </string-array>
    <string name="settings_score_edit_mode_absolute">Absolute</string>
    <string name="settings_score_edit_mode_picker">Picker</string>
    <string name="settings_score_edit_mode_offset">Offset</string>
    <string name="settings_score_edit_mode_key">com.dancingweasels.SETTINGS_SCORE_EDIT_MODE</string>
    <string name="settings_score_edit_mode_title">Score edit mode</string>
    <string name="settings_starting_value_key">com.dancingweasels.SETTINGS_STARTING_VALUE</string>
    <string name="settings_starting_value_title">Starting value</string>
    <string name="settings_min_value_key">com.dancingweasels.SETTINGS_MIN_VALUE</string>
    <string name="settings_min_value_title">Minimum value</string>
    <string name="settings_max_value_key">com.dancingweasels.SETTINGS_MAX_VALUE</string>
    <string name="settings_max_value_title">Maximum value</string>
    <string name="settings_step_size_key">com.dancingweasels.SETTINGS_STEP_SIZE</string>
    <string name="settings_step_size_title">Increment size</string>

    <string name="settings_team_settings_cat">Team Settings</string>
    <string name="settings_team_score_tracking_method_key">com.dancingweasels.SETTINGS_TEAM_SCORE_TRACK_METHOD</string>
    <string name="settings_team_score_tracking_method_title">Team score tracking method</string>
    <string name="settings_team_sort_method_key">com.dancingweasels.SETTINGS_TEAM_SORT_METHOD</string>
    <string name="settings_team_sort_method_title">Sort teams by</string>
    <string name="settings_team_members_sort_method_key">com.dancingweasels.SETTINGS_TEAM_MEMBER_SORT_METHOD</string>
    <string name="settings_team_members_sort_method_title">Sort team members by</string>
</resources>
