<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/team_list_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/team_list_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/team_list_constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/team_name_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/team_name"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toStartOf="@+id/team_score_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <Button
                android:id="@+id/team_score_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:text="@string/team_score"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="8dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="54dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/team_playerlist_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline6" />

            <ImageButton
                android:id="@+id/add_team_member_imagebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/add_team_member"
                app:layout_constraintEnd_toStartOf="@+id/team_edit_lock_imagebutton"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:srcCompat="@drawable/ic_add_black_24dp" />

            <TextView
                android:id="@+id/team_members_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/members"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/team_members_sort_imagebutton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/team_members_sort_imagebutton" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="62dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="94dp" />

            <ImageButton
                android:id="@+id/team_members_sort_imagebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/sort_team_members"
                app:layout_constraintEnd_toStartOf="@+id/add_team_member_imagebutton"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:srcCompat="@drawable/ic_sort_black_24dp" />

            <ImageButton
                android:id="@+id/team_edit_lock_imagebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/locks_the_team_members"
                app:layout_constraintEnd_toStartOf="@+id/team_members_expand_imagebutton"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:srcCompat="@drawable/ic_lock_open_black_24dp" />

            <ImageButton
                android:id="@+id/team_members_expand_imagebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/expand_or_collapse_the_team_member_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>