<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_list_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/player_list_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/player_list_constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/player_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/player_name"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/team_member_score_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <ImageButton
                android:id="@+id/player_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="8dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/lock_or_unlock_the_player_information"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_lock_open_black_24dp" />

            <Button
                android:id="@+id/team_member_score_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/sets_the_players_score"
                android:text="@string/player_score"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/player_lock"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="4dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="50dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>